--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ cache: bundler
 before_script:
     - source ~/virtualenv/python3.6.3/bin/activate
     - python --version # to debug
-    - pip install -r ./book/website/requirements.txt
-    - pip install -U attrs pytest # the installed versions in Travis are too old!
+    - pip install --user -r ./book/website/requirements.txt
+    - pip install --user -U attrs pytest # the installed versions in Travis are too old!
 
 script: 
     - bash ./scripts/test-file-size.sh
